--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "license": "MIT",
     "main": "index.js",
     "scripts": {
-        "start": "node ./index.js",
-        "watch": "nodemon ./index.js",
+        "start": "node -r esm ./index.js",
+        "watch": "nodemon -r esm ./index.js",
         "lint": "eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -16,10 +16,15 @@
         "url": "https://github.com"
     },
     "dependencies": {
+        "adaptive-expressions": "^4.16.0",
+        "adaptivecards": "^2.10.0",
+        "adaptivecards-templating": "^2.2.0",
         "botbuilder": "~4.15.0",
         "botbuilder-ai": "^4.15.0",
         "botbuilder-dialogs": "^4.15.0",
         "dotenv": "~8.2.0",
+        "esm": "^3.2.25",
+        "firebase": "^9.8.3",
         "restify": "~8.5.1"
     },
     "devDependencies": {
@@ -29,6 +34,8 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.16",
+        "ts-node": "^10.8.1",
+        "typescript": "^4.7.4"
     }
 }
